--- a/src/public/pages/report/styles/board.css
+++ b/src/public/pages/report/styles/board.css
@@ -7,35 +7,38 @@
     border-top-right-radius: 0px;
     padding: 10px;
 }
-.profile:nth-child(1){
+
+.profile:nth-child(1) {
     border-radius: 10px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
 }
+
 #board-outer-container {
     gap: 10px;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px; 
 }
 
 #board-inner-container {
     display: grid;
-     
+
 }
 
 #evaluation-bar {
-    background-color: white;
-    border: 2px solid var(--border-color);
-    border-radius: 5px;
+    border: none;
+    border-radius: 0.2rem;
+}
+
+#black-rect {
+    transition: all 1s ease 0s;
+}
+
+#white-rect {
+    transition: all 1s ease 0s;
 }
 
 #board {
     grid-column: 1 / 2;
-
-    max-width: 100%;
-    width: 720px;
-    height: auto;
-
-    border: 2px solid var(--border-color);
-    border-radius: 5px;
+    width: 730px;
+    height: 730px;
 }
