--- a/src/public/pages/report/styles/report.css
+++ b/src/public/pages/report/styles/report.css
@@ -18,25 +18,25 @@
     border-radius: 10px;
     width: 90%;
     text-align: center;
-    margin-bottom: 5px;
     border: 2px solid var(--border-color);
     height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     position: relative;
 }
 
-.accuracyDiv{
+.accuracyDiv {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
 }
-.accuracies{
+
+.accuracies {
     border: 2px solid #4caf50;
     border-radius: 10px;
     padding: 3px 5px 3px 5px;
@@ -58,12 +58,13 @@
     CLASSIFICATION MESSAGE
     e.g "Nd4 is a great move"
 */
-#classification-message-container, #top-alternative-message{
+#classification-message-container,
+#top-alternative-message {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-top: 25px;
+    margin-top: 60px;
     width: 90%;
     background-color: var(--primary-color);
     border-radius: 10px;
@@ -86,12 +87,12 @@
     ENGINE SUGGESTIONS
 */
 #engine-suggestions {
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    margin-top: 25px;
+    margin-top: 40px;
     border: 2px solid var(--border-color);
 
     width: 90%;
@@ -102,23 +103,23 @@
 #engine-suggestions-title {
     margin-top: 5px;
 }
-.accuracyHolder{
+
+.accuracyHolder {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    
+
 }
+
 .engine-suggestion {
     display: flex;
     justify-content: center;
     gap: 10px;
-
     margin: 5px;
+    font-size: 16px;
 
-    font-size: 18px;
-    
 }
 
 .engine-suggestion b {
@@ -142,7 +143,7 @@
     border-radius: 10px;
     background-color: var(--primary-color);
     border: 2px solid var(--border-color);
-    padding: 0px 5px 0px 5px;
+    padding: 5px 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
